Edited wiki page through web user interface.

--- a/wiki/TaskletInputOutputMapping.wiki
+++ b/wiki/TaskletInputOutputMapping.wiki
@@ -1,8 +1,8 @@
 #summary How workflow tasklets pass and exchange properties when job runs
 
-= Takslet to Tasklet Runtime Property Passing =
+= Tasklet to Tasklet Runtime Property Passing =
 
-SOATasklets can be chained together to form a job or workflow. SOATasklets (aka tasklets) that make up a job can work together and share data between each other. This is an extremely powerful feature of SOAFaces and tasklets. The ability of one tasklet to pass output properties to another tasklet in the chain enables tasklets to work together withing a job or workflow without any prior knowledge of each other.
+Tasklets can be chained together to form a job or workflow. Tasklets that make up a job can work together and share data between each other. This is an extremely powerful feature of SOAFaces and tasklets. The ability of one tasklet to pass output properties to another tasklet in the chain enables tasklets to work together withing a job or workflow without any prior knowledge of each other.
 
 What does that mean? Well let's take very simple example. Say you create a simple database tasks that pulls a status message from a database record. This is a custom tasklet let us say. Then let's imagine a simple generic tasklet that can send an email. This email tasklet has in input JavaBean that has properties for the email destination, subject and body. Now if the database tasklet could pass its status message to the email tasklet and place it as the subject that would allow the two tasklets to work together. All that is needed is a simple point a click way of mapping the output of the database tasklet to the input of the email tasklet.
 
@@ -10,11 +10,11 @@ SOAFaces facilitates this by defined a specification for the SOAFaces container 
 
 The properties of the output JavaBean of the one tasklet are mapped/passed/converted to the input JavaBean of another tasklet. Here is how the properties are passed and converted.
 
-A Job that is composed of multiple SOATasklets, can configure the SOATasklets to communicate with each other. A SOATasklet has the option of exposing properties via its output JavaBean that can then be passed to other SOATsasklet that execute after it in the Job workflow. These output properties can be passed to the input JavaBean properties of other SOATasklets. The result of this is that the output of one SOATasklet functions as the input to another SOATasklet. And you can do all this with no programming - just point and click to map one output property to a corresponing input property.
+A Job that is composed of multiple Tasklets, can configure the Tasklets to communicate with each other. A Tasklet has the option of exposing properties via its output JavaBean that can then be passed to other Tsasklet that execute after it in the Job workflow. These output properties can be passed to the input JavaBean properties of other Tasklets. The result of this is that the output of one Tasklet functions as the input to another Tasklet. And you can do all this with no programming - just point and click to map one output property to a corresponing input property.
 
-If a SOATasklet does not wish to communicate with other SOATasklets, then you will not need to use this feature. But the power of building components really comes into play when you can get components (SFBs), that have no prior knowledge of each other, to be able to collaborate by passing information between each other using simple point and click.
+If a Tasklet does not wish to communicate with other Tasklets, then you will not need to use this feature. But the power of building components really comes into play when you can get components (SFBs), that have no prior knowledge of each other, to be able to collaborate by passing information between each other using simple point and click.
 
-The user, using a GUI, can pick and choose which outputs map to which inputs for each pair of SOATasklet in a Job. There are restrictions in how the output/input mappings can work, especially when the output/input types are not identical. The types must be compatible based on what is referred to as "widening conversion rules". The GUI automatically takes care of deciding which output/input properties are compatible, so the user does not need to deal with it directly, but it can be helpful for some user to understand the details. They are as follows:
+The user, using a GUI, can pick and choose which outputs map to which inputs for each pair of Tasklet in a Job. There are restrictions in how the output/input mappings can work, especially when the output/input types are not identical. The types must be compatible based on what is referred to as "widening conversion rules". The GUI automatically takes care of deciding which output/input properties are compatible, so the user does not need to deal with it directly, but it can be helpful for some user to understand the details. They are as follows:
 
 Widening Conversion Rules
 
@@ -37,10 +37,10 @@ Non Array Property to Array Property: If the non Array output property is the sa
 Array property to Array Property: If the Array types are of same type, then the mapping is simple. If they are of different types, but support widening conversion rules then the output Array property is copied into an Array that is of the same type as the target input JavaBean property Array.
 Array property to non Array property: This type of mapping is not possible.
 Input JavaBean Considerations:
-If a BeanInfo object exists for an input JavaBean, it will be used during the mapping processes between SOATasklets to determine which input JavaBean properties are exposed for mapping. The developer can use this to control what input JavaBean properties are exposed for mapping from other SOATasklets. By defining a BeanInfo class for the input JavaBean, this allows the SOATasklet developer to control what JavaBean properties are exposed to other SOATasklets and which are not exposed. If a BeanInfo object is not available for an input JavaBean, then only properties with public setter/getter methods will be exposed for mapping between SOATasklets.
+If a BeanInfo object exists for an input JavaBean, it will be used during the mapping processes between Tasklets to determine which input JavaBean properties are exposed for mapping. The developer can use this to control what input JavaBean properties are exposed for mapping from other Tasklets. By defining a BeanInfo class for the input JavaBean, this allows the Tasklet developer to control what JavaBean properties are exposed to other Tasklets and which are not exposed. If a BeanInfo object is not available for an input JavaBean, then only properties with public setter/getter methods will be exposed for mapping between Tasklets.
 
 Output JavaBean Considerations:
-No custom BeanInfo will be used for the output bean. Output Beans are reflected to find their getter methods/properties. All properties with getter methods are available for passing to the input JavaBean properties of other SOATasklets.
+No custom BeanInfo will be used for the output bean. Output Beans are reflected to find their getter methods/properties. All properties with getter methods are available for passing to the input JavaBean properties of other Tasklets.
 
 Arrays and Aggregation Considerations:
-Array properties can be used to allow one or more output JavaBeans to aggregate into an input JavaBean. It is really up to the SOATasklet developer to implement the setter method of the property method such that it aggregates/appends to the input JavaBean property Array or not.
+Array properties can be used to allow one or more output JavaBeans to aggregate into an input JavaBean. It is really up to the Tasklet developer to implement the setter method of the property method such that it aggregates/appends to the input JavaBean property Array or not.
