--- a/wiki/HowToCreateTasklet.wiki
+++ b/wiki/HowToCreateTasklet.wiki
@@ -1,7 +1,7 @@
 #summary Steps to creating a SFB Tasklet
 
 ==Example of a Tasklet Based SFB==
-This example shows how to build a very simple SFB that implements a Tasklet and also includes an Applet for customizing the Tasklet's input !JavaBean.
+This example shows how to build a very simple SFB that implements a Tasklet and also includes an Weblet for customizing the Tasklet's input !JavaBean.
 
 Follow these steps to learn how to develop, package and deploy your own SOAFaces Bundle (SFB):
 
@@ -63,7 +63,7 @@ The `onExecute` method will be called when the above Tasklet is run as part of a
 This step is optional when creating Tasklets. The Weblet will be used to customize the input !JavaBean that is used as input to the Tasklet when the job is run. Here is what the Weblet implementation might look like:
 
 {{{
-public class HelloWorldCustomizer extends SimplePOJOApplet
+public class HelloWorldCustomizer extends SimplePOJOWeblet
 { 
   private TextBox _oNameField = new TextBox();
   private HelloWorldInput _oMyInputBean = null;
@@ -102,7 +102,7 @@ public class HelloWorldCustomizer extends SimplePOJOApplet
    * any necessary validation checks. If the validation
    * is not proper it should return false.
    *
-   * The Container hosting the SOApplet will call
+   * The Container hosting the Weblet will call
    * this method in order to save the input JavaBean
    * to its persistent store. The saved state of the
    * input JavaBean is what is referenced when the
@@ -206,10 +206,10 @@ SOAFaces-Vendor: Grand Logic, Inc
 SOAFaces-Category: example
 #Tasklet run on the server-side when java/task is run
 SOAFaces-Tasklet: org.beansoup.helloworld3.workflow.HelloWorld
-#Optional input JavaBean used by the Applet and Tasklet
+#Optional input JavaBean used by the Weblet and Tasklet
 SOAFaces-InputBean: org.beansoup.helloworld3.client.HelloWorldInput
 #GWT client Module name
-SOAFaces-Applet: org.beansoup.helloworld3.HelloModuleName
+SOAFaces-Weblet: org.beansoup.helloworld3.HelloModuleName
 }}}
 
 ===Step 6: Package Contents into a SFB JAR file===
@@ -257,13 +257,13 @@ Here is an example of a simple ANT target that can construct the SFB archive fil
            <attribute name="SOAFaces-Name"            value="Hello World 3"/>
            <attribute name="SOAFaces-SymbolicName"    value="surda-beansoup-helloworld3"/>
            <attribute name="SOAFaces-Version"         value="1.0.0"/>
-           <attribute name="SOAFaces-Description"     value="Simple Tasklet with an input JavaBean and Applet customizer"/>
+           <attribute name="SOAFaces-Description"     value="Simple Tasklet with an input JavaBean and Weblet customizer"/>
            <attribute name="SOAFaces-Vendor"          value="Grand Logic, Inc"/>
            <attribute name="SOAFaces-Category"        value="example"/>
            <attribute name="SOAFaces-Tasklet"         value="org.beansoup.helloworld3.workflow.HelloWorld"/>
            <attribute name="SOAFaces-InputBean"       value="org.beansoup.helloworld3.client.HelloWorldInput"/>
            <attribute name="SOAFaces-OutputBean"      value=""/>
-           <attribute name="SOAFaces-Applet"          value="org.beansoup.helloworld3.client.HelloWorldCustomizer"/>
+           <attribute name="SOAFaces-Weblet"          value="org.beansoup.helloworld3.client.HelloWorldCustomizer"/>
            <attribute name="SOAFaces-InputViewer"     value=""/>
            <attribute name="SOAFaces-OutputViewer"    value=""/>
          </manifest>    
