Edited wiki page through web user interface.

--- a/wiki/Downloads.wiki
+++ b/wiki/Downloads.wiki
@@ -2,8 +2,18 @@
 
 = SOAFaces Release Archive =
 
+== Version 2.3.6 ==
+December 29, 2008 - [http://soafaces.googlecode.com/files/release_notes-2.3.6.html Release Notes]
 
-== Version 2.2.0 ==
+|| *Download Package* || *Description* ||
+|| [http://soafaces.googlecode.com/files/soafaces-jars-2.3.6.zip soafaces-jars-2.3.6.zip] || SOAFaces binary JARs ||
+|| [http://soafaces.googlecode.com/files/soafaces-src-2.3.6.zip soafaces-src-2.3.6.zip] || SOAFaces source ||
+|| [http://soafaces.googlecode.com/files/soafaces-javadocs-2.3.0.zip soafaces-javadocs-2.3.6.zip] || SOAFaces Javadocs ||
+|| [http://soafaces.googlecode.com/files/beansoup-sfb-2.3.6.zip beansoup-sfb-2.3.6.zip] || Beansoup compiled sample SFB components. Unzip and use SFBs in your SOAFaces Container ||
+|| [http://soafaces.googlecode.com/files/beansoup-sfb-src-2.3.6.zip beansoup-sfb-src-2.3.6.zip] || Beansoup sample SFB source code. Sample SFB components ||
+|| [http://soafaces.googlecode.com/files/universalapp-example-war-2.3.6.zip universalapp-example-war-2.3.6.zip] || Example using !UniversalClient API in a GWT web application to access remote services with no RPC! WAR file includes the sample source code for both GWT client and backend services. ||
+
+== Version 2.3.0 ==
 October 30, 2008 - [http://soafaces.googlecode.com/files/release_notes-2.3.0.html Release Notes]
 
 || *Download Package* || *Description* ||
