--- a/wiki/Downloads.wiki
+++ b/wiki/Downloads.wiki
@@ -9,8 +9,8 @@ July 15, 2009 - [http://soafaces.googlecode.com/files/release_notes-2.4.0.html R
 || [http://soafaces.googlecode.com/files/soafaces-jars-2.4.0.zip soafaces-jars-2.4.0.zip] || SOAFaces binary JARs ||
 || [http://soafaces.googlecode.com/files/soafaces-src-2.4.0.zip soafaces-src-2.4.0.zip] || SOAFaces source ||
 || [http://soafaces.googlecode.com/files/soafaces-javadocs-2.4.0.zip soafaces-javadocs-2.4.0.zip] || SOAFaces Javadocs ||
-|| [http://soafaces.googlecode.com/files/beansoup-sfb-2.4.0.zip beansoup-sfb-2.4.0.zip] || Beansoup compiled sample SFB components. Unzip and use SFBs in your SOAFaces Container ||
-|| [http://soafaces.googlecode.com/files/beansoup-sfb-src-2.4.0.zip beansoup-sfb-src-2.4.0.zip] || Beansoup sample SFB source code. Sample SFB components ||
+|| [http://soafaces.googlecode.com/files/beansoup-sfb-2.4.0.zip beansoup-sfb-2.4.0.zip] || Beansoup compiled sample Bundle components. Unzip and use Bundles in your SOAFaces Container ||
+|| [http://soafaces.googlecode.com/files/beansoup-sfb-src-2.4.0.zip beansoup-sfb-src-2.4.0.zip] || Beansoup sample Bundle source code. Sample Bundle components ||
 || [http://soafaces.googlecode.com/files/universalapp-example-war-2.4.0.zip universalapp-example-war-2.4.0.zip] || Example using !UniversalClient API in a GWT web application to access remote services with no RPC! WAR file includes the sample source code for both GWT client and backend services. ||
 
 == Version 2.3.6 ==
@@ -20,8 +20,8 @@ December 29, 2008 - [http://soafaces.googlecode.com/files/release_notes-2.3.6.ht
 || [http://soafaces.googlecode.com/files/soafaces-jars-2.3.6.zip soafaces-jars-2.3.6.zip] || SOAFaces binary JARs ||
 || [http://soafaces.googlecode.com/files/soafaces-src-2.3.6.zip soafaces-src-2.3.6.zip] || SOAFaces source ||
 || [http://soafaces.googlecode.com/files/soafaces-javadocs-2.3.0.zip soafaces-javadocs-2.3.6.zip] || SOAFaces Javadocs ||
-|| [http://soafaces.googlecode.com/files/beansoup-sfb-2.3.6.zip beansoup-sfb-2.3.6.zip] || Beansoup compiled sample SFB components. Unzip and use SFBs in your SOAFaces Container ||
-|| [http://soafaces.googlecode.com/files/beansoup-sfb-src-2.3.6.zip beansoup-sfb-src-2.3.6.zip] || Beansoup sample SFB source code. Sample SFB components ||
+|| [http://soafaces.googlecode.com/files/beansoup-sfb-2.3.6.zip beansoup-sfb-2.3.6.zip] || Beansoup compiled sample Bundle components. Unzip and use Bundles in your SOAFaces Container ||
+|| [http://soafaces.googlecode.com/files/beansoup-sfb-src-2.3.6.zip beansoup-sfb-src-2.3.6.zip] || Beansoup sample Bundle source code. Sample Bundle components ||
 || [http://soafaces.googlecode.com/files/universalapp-example-war-2.3.6.zip universalapp-example-war-2.3.6.zip] || Example using !UniversalClient API in a GWT web application to access remote services with no RPC! WAR file includes the sample source code for both GWT client and backend services. ||
 
 == Version 2.3.0 ==
@@ -31,8 +31,8 @@ October 30, 2008 - [http://soafaces.googlecode.com/files/release_notes-2.3.0.htm
 || [http://soafaces.googlecode.com/files/soafaces-jars-2.3.0.zip soafaces-jars-2.3.0.zip] || SOAFaces binary JARs ||
 || [http://soafaces.googlecode.com/files/soafaces-src-2.3.0.zip soafaces-src-2.3.0.zip] || SOAFaces source ||
 || [http://soafaces.googlecode.com/files/soafaces-javadocs-2.3.0.zip soafaces-javadocs-2.3.0.zip] || SOAFaces Javadocs ||
-|| [http://soafaces.googlecode.com/files/beansoup-sfb-2.3.0.zip beansoup-sfb-2.3.0.zip] || Beansoup compiled sample SFB components. Unzip and use SFBs in your SOAFaces Container ||
-|| [http://soafaces.googlecode.com/files/beansoup-sfb-src-2.3.0.zip beansoup-sfb-src-2.3.0.zip] || Beansoup sample SFB source code. Sample SFB components ||
+|| [http://soafaces.googlecode.com/files/beansoup-sfb-2.3.0.zip beansoup-sfb-2.3.0.zip] || Beansoup compiled sample Bundle components. Unzip and use the Bundles in your SOAFaces Container ||
+|| [http://soafaces.googlecode.com/files/beansoup-sfb-src-2.3.0.zip beansoup-sfb-src-2.3.0.zip] || Beansoup sample Bundle source code. Sample Bundle components ||
 || [http://soafaces.googlecode.com/files/universalapp-example-war-2.3.0.zip universalapp-example-war-2.3.0.zip] || Example using !UniversalClient API in a GWT web application to access remote services with no RPC! WAR file includes the sample source code for both GWT client and backend services. ||
 
 == Version 2.1.0 Beta ==
@@ -42,8 +42,8 @@ September 25, 2008 - [http://soafaces.googlecode.com/files/release_notes-2.1.0.h
 || [http://soafaces.googlecode.com/files/soafaces-jars-2.1.0.zip soafaces-jars-2.1.0.zip] || SOAFaces binary JARs ||
 || [http://soafaces.googlecode.com/files/soafaces-src-2.1.0.zip soafaces-src-2.1.0.zip] || SOAFaces source ||
 || [http://soafaces.googlecode.com/files/soafaces-javadocs-2.1.0.zip soafaces-javadocs-2.1.0.zip] || SOAFaces Javadocs ||
-|| [http://soafaces.googlecode.com/files/beansoup-sfb-2.1.0.zip beansoup-sfb-2.1.0.zip] || Beansoup compiled sample SFB components. Unzip and use SFBs in your SOAFaces Container ||
-|| [http://soafaces.googlecode.com/files/beansoup-sfb-src-2.1.0.zip beansoup-sfb-src-2.1.0.zip] || Beansoup sample SFB source code. Sample SFB components ||
+|| [http://soafaces.googlecode.com/files/beansoup-sfb-2.1.0.zip beansoup-sfb-2.1.0.zip] || Beansoup compiled sample Bundle components. Unzip and use Bundles in your SOAFaces Container ||
+|| [http://soafaces.googlecode.com/files/beansoup-sfb-src-2.1.0.zip beansoup-sfb-src-2.1.0.zip] || Beansoup sample Bundle source code. Sample Bundle components ||
 || [http://soafaces.googlecode.com/files/universalapp-example-war-2.1.0.zip universalapp-example-war-2.1.0.zip] || Example using !UniversalClient API in a GWT web application to access remote services with no RPC! WAR file includes the sample source code for both GWT client and backend services. ||
 
 == Version 2.0.3 Beta ==
@@ -53,8 +53,8 @@ September 11, 2008 - [http://soafaces.googlecode.com/files/release_notes-2.0.3.h
 || [http://soafaces.googlecode.com/files/soafaces-jars-2.0.3.zip soafaces-jars-2.0.3.zip] || SOAFaces binary JARs ||
 || [http://soafaces.googlecode.com/files/soafaces-src-2.0.3.zip soafaces-src-2.0.3.zip] || SOAFaces source ||
 || [http://soafaces.googlecode.com/files/soafaces-javadocs-2.0.3.zip soafaces-javadocs-2.0.3.zip] || SOAFaces Javadocs ||
-|| [http://soafaces.googlecode.com/files/beansoup-sfb-2.0.3.zip beansoup-sfb-2.0.3.zip] || Beansoup compiled sample SFB components. Unzip and use SFBs in your SOAFaces Container ||
-|| [http://soafaces.googlecode.com/files/beansoup-sfb-src-2.0.3.zip beansoup-sfb-src-2.0.3.zip] || Beansoup sample SFB source code. Sample SFB components ||
+|| [http://soafaces.googlecode.com/files/beansoup-sfb-2.0.3.zip beansoup-sfb-2.0.3.zip] || Beansoup compiled sample Bundle components. Unzip and use Bundles in your SOAFaces Container ||
+|| [http://soafaces.googlecode.com/files/beansoup-sfb-src-2.0.3.zip beansoup-sfb-src-2.0.3.zip] || Beansoup sample Bundle source code. Sample Bundle components ||
 || [http://soafaces.googlecode.com/files/universalapp-example-war-2.0.3.zip universalapp-example-war-2.0.3.zip] || Example using !UniversalClient API in a GWT web application to access remote services with no RPC! WAR file includes the sample source code for both GWT client and backend services. ||
 
 
@@ -65,6 +65,6 @@ July 9, 2008
 || [http://soafaces.googlecode.com/files/soafaces-jars-2.0.0.zip soafaces-jars-2.0.0.zip] || SOAFaces binary JARs ||
 || [http://soafaces.googlecode.com/files/soafaces-src-2.0.0.zip soafaces-src-2.0.0.zip] || SOAFaces source ||
 || [http://soafaces.googlecode.com/files/soafaces-javadocs-2.0.0.zip soafaces-javadocs-2.0.0.zip] || SOAFaces Javadocs ||
-|| [http://soafaces.googlecode.com/files/beansoup-sfb-2.0.0.zip beansoup-sfb-2.0.0.zip] || Beansoup compiled sample SFB components. Unzip and use SFBs in your SOAFaces Container ||
-|| [http://soafaces.googlecode.com/files/beansoup-sfb-src-2.0.0.zip beansoup-sfb-src-2.0.0.zip] || Beansoup sample SFB source code. Sample SFB components ||
+|| [http://soafaces.googlecode.com/files/beansoup-sfb-2.0.0.zip beansoup-sfb-2.0.0.zip] || Beansoup compiled sample Bundle components. Unzip and use Bundles in your SOAFaces Container ||
+|| [http://soafaces.googlecode.com/files/beansoup-sfb-src-2.0.0.zip beansoup-sfb-src-2.0.0.zip] || Beansoup sample Bundle source code. Sample Bundle components ||
 || [http://soafaces.googlecode.com/files/universalapp-example-war-2.0.0.zip universalapp-example-war-2.0.0.zip] || Example using !UniversalClient API in a GWT web application to access remote services with no RPC! WAR file includes the sample source code for both GWT client and backend services. ||
