--- a/wiki/HowToCreateApplication.wiki
+++ b/wiki/HowToCreateApplication.wiki
@@ -1,15 +1,15 @@
-#summary How to create a SFB Application
+#summary How to create a Bundle Application
 
-==Example of an Application Based SFB==
-This example shows how to build a SFB application. The application uses an input !JavaBean to allow users to customize the application behavior. The !JavaBean is persisted automatically by the framework.
+==Example of an Application Based Bundle==
+This example shows how to build a Bundle application. The application uses an input !JavaBean to allow users to customize the application behavior. The !JavaBean is persisted automatically by the framework.
 
-Follow these steps to learn how to develop, package and deploy your own SOAFaces Bundle (SFB) application:
+Follow these steps to learn how to develop, package and deploy your own SOAFaces Bundle (Bundle) application:
 
   # Implement Weblet Interface
   # Define an Input !JavaBean for Weblet (Optional)
   # Create MANIFEST.MF File
-  # Package Contents into a SFB JAR file
-  # Deploy the new SFB to a SFB Container (like !JobServer)
+  # Package Contents into a Bundle JAR file
+  # Deploy the new Bundle to a SOAFaces Container (like !JobServer)
 
 ===Step 1: Implement Weblet Interface ==
 
@@ -116,7 +116,7 @@ public class HelloWorldInput implements IsSerializable
 
 ===Step 3: Create MANIFEST.MF File===
 
-The MANIFEST.MF file contains the meta information that informs a SOAFaces container like !JobServer what is contained in the SFB JAR file and what interfaces are defined by the SFB. The file is placed in the META-INF directory within the SFB JAR.
+The MANIFEST.MF file contains the meta information that informs a SOAFaces container like !JobServer what is contained in the Bundle JAR file and what interfaces are defined by the Bundle. The file is placed in the META-INF directory within the Bundle JAR.
 
 {{{
 SOAFaces-Name: Hello World App
@@ -131,9 +131,9 @@ SOAFaces-InputBean: org.beansoup.helloworld.client.HelloWorldInput
 SOAFaces-Weblet: org.beansoup.helloworld.HelloBundeName
 }}}
 
-===Step 4: Package Contents into a SFB JAR file===
+===Step 4: Package Contents into a Bundle JAR file===
 
-All the code and content are packaged and put into a SFB JAR file with the file extension .sfb. Here is an example directory structure of the JAR file.
+All the code and content are packaged and put into a Bundle JAR file with the file extension .sfb. Here is an example directory structure of the JAR file.
 
 {{{
 META-INF/MANIFEST.MF
@@ -147,10 +147,10 @@ lib/
     someThirdPartyGWT-Client.jar
 }}}
 
-Here is an example of a simple ANT target that can construct the SFB archive file:
+Here is an example of a simple ANT target that can construct the Bundle archive file:
 
 {{{
-    <target name="build_sfb" depends="compile" description="Package application into a SFB jar">
+    <target name="build_sfb" depends="compile" description="Package application into a Bundle jar">
     <mkdir dir="build/sfb_build/org-beansoup-helloworld-v1-0-0/classes" />
       <copy todir="build/sfb_build/org-beansoup-helloworld-v1-0-0/classes"
             overwrite="false">
@@ -182,8 +182,8 @@ Here is an example of a simple ANT target that can construct the SFB archive fil
 
 Notice that the client GWT code requires the source also be included in the JAR file. The GWT compiler requires the source and will use this to compile, on the fly, the Weblet into GWT AJAX code. The lib directory can contain any needed third party JARs used by the Weblet.
 
-Note, that you have the option to include the GWT client code (java source code an compiled code) in the SFB and let the SFB container compile the GWT client code into javascript for you (frees developer from dealing with GWT compiler) or you can compile the GWT client code yourself (using the GWT compiler) and include the javascript in the SFB directly. You simple include the compiled GWT client code in the <code>www</code> directory in the SFB jar.
+Note, that you have the option to include the GWT client code (java source code an compiled code) in the Bundle and let the SOAFaces container compile the GWT client code into javascript for you (frees developer from dealing with GWT compiler) or you can compile the GWT client code yourself (using the GWT compiler) and include the javascript in the Bundle directly. You simple include the compiled GWT client code in the <code>www</code> directory in the Bundle jar.
 
-===Step 5: Deploy the new SFB to a SFB Container (like !JobServer)===
+===Step 5: Deploy the new Bundle to a SOAFaces Container (like !JobServer)===
 
-Name the SFB JAR something like myhelloworld.sfb and place it in the !JobServer soafaces directory. The name must be unique within !JobServer. Now go to the !JobServer SOAFaces Repository tool and you should see the new SFB. You are now ready to deploy and run your application.
+Name the Bundle JAR something like myhelloworld.sfb and place it in the !JobServer soafaces directory. The name must be unique within !JobServer. Now go to the !JobServer SOAFaces Repository tool and you should see the new Bundle. You are now ready to deploy and run your application.
