Edited wiki page through web user interface.

--- a/wiki/TaskletInputOutputMapping.wiki
+++ b/wiki/TaskletInputOutputMapping.wiki
@@ -12,7 +12,7 @@ The properties of the output JavaBean of the one tasklet are mapped/passed/conve
 
 A Job that is composed of multiple Tasklets, can configure the Tasklets to communicate with each other. A Tasklet has the option of exposing properties via its output JavaBean that can then be passed to other Tsasklet that execute after it in the Job workflow. These output properties can be passed to the input JavaBean properties of other Tasklets. The result of this is that the output of one Tasklet functions as the input to another Tasklet. And you can do all this with no programming - just point and click to map one output property to a corresponing input property.
 
-If a Tasklet does not wish to communicate with other Tasklets, then you will not need to use this feature. But the power of building components really comes into play when you can get components (SFBs), that have no prior knowledge of each other, to be able to collaborate by passing information between each other using simple point and click.
+If a Tasklet does not wish to communicate with other Tasklets, then you will not need to use this feature. But the power of building components really comes into play when you can get components (Bundles), that have no prior knowledge of each other, to be able to collaborate by passing information between each other using simple point and click.
 
 The user, using a GUI, can pick and choose which outputs map to which inputs for each pair of Tasklet in a Job. There are restrictions in how the output/input mappings can work, especially when the output/input types are not identical. The types must be compatible based on what is referred to as "widening conversion rules". The GUI automatically takes care of deciding which output/input properties are compatible, so the user does not need to deal with it directly, but it can be helpful for some user to understand the details. They are as follows:
 
