--- a/wiki/CreateSoaFacesBundle.wiki
+++ b/wiki/CreateSoaFacesBundle.wiki
@@ -1,10 +1,8 @@
-#summary How to create a SFB (SOAFaces Bundle)
+#summary How to create a Bundle (SOAFaces Bundle)
 
-A SFB (SOAFaces Bundle) is a simple JAR that contains the classes and resources needed to execute your SOAFaces Application or Task/Job. SFBs are very powerful and flexible. You can develop a SFB to serve as an Application that will implement a GUI Application or as a Tasklet that will be part of a Job. In either case the process of developing, packaging, and deploying is very similar. 
+A Bundle (SOAFaces Bundle) is a simple JAR that contains the classes and resources needed to execute your SOAFaces Application or Task/Job. Bundles are very powerful and flexible. You can develop a Bundle to serve as an Application that will implement a GUI Application or as a Tasklet that will be part of a Job. In either case the process of developing, packaging, and deploying is very similar. 
 
-Let's walk through the process of creating a very simple SFB. We will show you how to create the two kinds of SFBs:
-  # [HowToCreateApplication Application oriented SFB (used to build SOA powered GUI applications)]
-  # [HowToCreateTasklet Tasklet oriented SFB (used to build batch jobs and workflows)]
-
-
+Let's walk through the process of creating a very simple Bundle. We will show you how to create the two kinds of Bundles:
+  # [HowToCreateApplication Application oriented Bundle (used to build SOA powered GUI applications)]
+  # [HowToCreateTasklet Tasklet oriented Bundle (used to build batch jobs and workflows)]
 
